--- a/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/FolderSelectorItem.axml
+++ b/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/FolderSelectorItem.axml
@@ -3,28 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/FolderSelectorItem_Layout"
-    android:background="@drawable/selector_item_shape"
     android:layout_marginTop="4dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/selector_item_shape">
+<!---->
     <ImageView
-        android:id="@+id/FolderSelectorItem_FolderImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:id="@+id/FolderSelectorItem_Image"
+        android:layout_width="25dp"
+        android:layout_height="35dp"
+        android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
-        android:src="@drawable/selector_folder" />
+        android:src="@drawable/selector_file_none" />
     <TextView
         android:id="@+id/FolderSelectorItem_Path"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_centerVertical="true"
         android:layout_marginRight="70dp"
         android:layout_marginLeft="70dp"
         android:inputType="textMultiLine"
         android:ellipsize="start"
         android:maxLines="2"
-        scrollHorizontally="false"
         android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextVTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewiewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
         android:duplicateParentState="true"
         android:layout_centerInParent="true" />
@@ -34,6 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="8dp"
         android:button="@drawable/selector_bg_check" />
+<!---->
 </RelativeLayout>
