--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
@@ -39,7 +39,7 @@
             });
 
             $(".service-edit").click(function () {
-                ViewScript.RequestPartial('#MainContent', "Replace", '@HostDetailView.Partial.Host', '@HostDetailView.Partial.Path', guid);
+                ViewScript.RequestPartial('#MainContent', "Replace", '@HostEditView.Partial.Host', '@HostEditView.Partial.Path', guid);
             });
 
         })
