--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/FolderMapsView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/FolderMapsView.cshtml
@@ -9,6 +9,8 @@
             </li>
             <li class="list-group-item command-item " data-guid="@one.Guid">
                 <span class="command-item-delete red">删除</span>
+                <span class="command-item-play orangered">执行</span>
+                <span class="command-item-restore black">还原</span>
                 <span class="command-item-eidt blue">编辑</span>
             </li>
             }
@@ -17,11 +19,11 @@
 
     <div class="line-section">
         <ul class="list-group">
-            <li class="list-group-item command-item-explor">
+            <li class="list-group-item command-explor">
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
                 <span>查看归档</span>
             </li>
-            <li class="list-group-item command-item-play">
+            <li class="list-group-item command-play">
                 <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
                 <span>开始归档</span>
             </li>
@@ -43,21 +45,37 @@
         });
 
         $(".command-item-add").click(function () {
-            ViewScript.RequestPartial('#MainContent',"Replace" , '@FolderMapDetailView.Partial.Host', '@FolderMapDetailView.Partial.Path', "");
+            ViewScript.RequestPartial('#MainContent',"Replace" , '@FolderMapEditView.Partial.Host', '@FolderMapEditView.Partial.Path', "");
         });
      
         $(".command-item-delete").click(function () {
             var guid = $(this).parent().data("guid");
             var result = false;
-            javascript: result = BuinessScript.DeleteHost(guid);
+            javascript: result = BuinessScript.DeleteFolderMap(guid);
             if (result) {
                 ViewScript.RequestPartial('#MainContent', "Replace", '@FolderMapsView.Partial.Host', '@FolderMapsView.Partial.Path');
             }
         });
         $(".command-item-eidt").click(function () {
             var guid = $(this).parent().data("guid");
-            ViewScript.RequestPartial('#MainContent', "Replace",'@FolderMapDetailView.Partial.Host', '@FolderMapDetailView.Partial.Path', guid);
+            ViewScript.RequestPartial('#MainContent', "Replace",'@FolderMapEditView.Partial.Host', '@FolderMapEditView.Partial.Path', guid);
         });
+
+        $(".command-play").click(function () {
+            javascript: BuinessScript.PullMapFiles("")
+        });
+
+
+        $(".command-item-play").click(function () {
+            var guid = $(this).parent().data("guid");
+            javascript: BuinessScript.PullMapFiles(guid)
+        });
+
+        $(".command-item-restore").click(function () {
+            var guid = $(this).parent().data("guid");
+            javascript: BuinessScript.PushMapFiles(guid)
+        });
+
     })
     </script>
 
