--- a/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuLeftContent.axml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuLeftContent.axml
@@ -28,7 +28,7 @@
                 android:textColor="@android:color/white" />
         </LinearLayout>
         <TextView
-            android:id="@+id/MenuLeft_UserName"
+            android:id="@+id/MenuLeft_UserSignature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="30dp"
