--- a/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/Scaner_IncludeTop.axml
+++ b/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/Scaner_IncludeTop.axml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="25dp"
-            android:src="@drawable/app_back" />
+            android:src="@drawable/Scaner_back" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
