--- a/src/Mobile/LazyWelfare.AndroidCtrls.LoadingAnimation/Resources/layout/LoadingDialog.axml
+++ b/src/Mobile/LazyWelfare.AndroidCtrls.LoadingAnimation/Resources/layout/LoadingDialog.axml
@@ -9,7 +9,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
-        <LazyWelfare.AndroidCtrls.Loading.LoadingView
+        <LazyWelfare.AndroidCtrls.LoadingAnimation.LoadingView
             android:id="@+id/WaitingView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
