--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
@@ -24,7 +24,11 @@
 <script>
         $(function () {
             var guid ='@Model.Domain';
-
+            $(".command-item").each(function () {
+                var width = $(this).width();
+                var count = $("span", this).length;
+                $("span", this).width((width - count) / count);
+            });
             $(".command-item").css("display", "none");
             $(".main-item").click(function () {
                 $(this).next().fadeToggle();
