--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/FolderMapIndexView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/FolderMapIndexView.cshtml
@@ -1,1 +1,31 @@
 ﻿
+<div class="line-section">
+    <div class="list-group">
+        <a href="javascript:void(0);" class="list-group-item  file-expleror">
+            <span class="glyphicon   glyphicon-inbox  " aria-hidden="true"></span>
+            <span>文档管理</span>
+        </a>
+    </div>
+</div>
+<div class="line-section">
+    <div class="list-group">
+        <a href="javascript:void(0);" class="list-group-item  file-play">
+            <span class="glyphicon   glyphicon-retweet  " aria-hidden="true"></span>
+            <span>资源归档</span>
+        </a>
+    </div>
+</div>
+<script>
+    $(function () {
+
+        $(".file-expleror").click(function () {
+            javascript: BuinessScript.FileExpleror();
+        });
+
+
+        $(".file-play").click(function () {
+            ViewScript.RequestPartial('#MainContent', "Replace", '@FolderMapsView.Partial.Host', '@FolderMapsView.Partial.Path');
+        });
+
+    })
+</script>
