修正 foldermap store

--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/FolderMapEditView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/FolderMapEditView.cshtml
@@ -8,7 +8,7 @@
     </div>
     <div class="panel-body">
         <form class="folderModelForm">
-            <input type="hidden" name="Domain" value="@Model.Guid" />
+            <input type="hidden" name="Guid" value="@Model.Guid" />
             <div class="form-group">
                 <label class="control-label">归档名称</label>
                 <div class="controls">
