--- a/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/FileExpleror.axml
+++ b/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/FileExpleror.axml
@@ -16,6 +16,7 @@
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="?android:attr/selectableItemBackground"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="wrap_content"
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:layout_marginRight="5dp"
                 android:orientation="horizontal">
                 <TextView
