--- a/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/FileExpleror.axml
+++ b/src/Mobile/LazyWelfare.AndroidCtrls/Resources/layout/FileExpleror.axml
@@ -85,6 +85,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/FileExpleror_RecyclerView"
             android:visibility="invisible"
+            android:longClickable="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
