--- a/src/Mobile/MicroBluer.AndroidCtrls/Resources/layout/FileSelector.axml
+++ b/src/Mobile/MicroBluer.AndroidCtrls/Resources/layout/FileSelector.axml
@@ -3,71 +3,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:background="#F9F9FA">
-        <LinearLayout
-            android:id="@+id/FolderSelector_Back"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/selector_back" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textColor="#458B74"
-                android:text="返回上级" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/FolderSelector_btCancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="10dp"
-                android:textColor="#458B74"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:text="关闭" />
-            <TextView
-                android:id="@+id/FolderSelector_btSure"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="10dp"
-                android:textColor="#458B74"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:text="确定" />
-        </LinearLayout>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/FolderSelector_RecyclerView"
+        android:layout_height="wrap_content"
+        android:background="#F9F9FA"
+        android:orientation="vertical">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="?android:attr/actionBarSize">
+            <LinearLayout
+                android:id="@+id/FolderSelector_Back"
+                android:layout_centerVertical="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/selector_back" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="#458B74"
+                    android:text="返回上级" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/FolderSelector_btCancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="10dp"
+                    android:textColor="#458B74"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:text="关闭" />
+                <TextView
+                    android:id="@+id/FolderSelector_btSure"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="10dp"
+                    android:textColor="#458B74"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:text="确定" />
+            </LinearLayout>
+        </RelativeLayout>
         <TextView
             android:id="@+id/FolderSelector_Title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="start"
-            android:maxLines="1"
+            android:background="@drawable/expleror_nodetree_border"
             android:textColor="#458B74"
-            android:text="目录"
-            android:layout_alignParentBottom="true" />
-    </RelativeLayout>
+            android:textSize="9dp"
+            android:text="目录&gt;" />
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/FolderSelector_RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
