--- a/src/Mobile/MicroBluer.AndroidMobile/Views/LayoutView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/LayoutView.cshtml
@@ -1,5 +1,5 @@
-﻿@using LazyWelfare.AndroidMobile.Views.Partials
-@model  LazyWelfare.AndroidMobile.Template.Setting
+﻿@using MicroBluer.AndroidMobile.Views.Partials
+@model  MicroBluer.AndroidMobile.Template.Setting
 
 <html>
 <head>
