--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/FolderMapEditView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/FolderMapEditView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LazyWelfare.AndroidMobile.Models.FolderMapModel
+﻿@model  MicroBluer.AndroidMobile.Models.FolderMapModel
 
 <div class="panel panel-default">
     <div class="panel-heading">
