--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostFacultyView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostFacultyView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LazyWelfare.AndroidMobile.Models.HostModel
+﻿@model  MicroBluer.AndroidMobile.Models.HostModel
 
 <ul class="list-group" data-guid="@Model.Domain">
     <li class="list-group-item service-edit active">
