--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostIndexView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostIndexView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LazyWelfare.AndroidMobile.Models.HostModel
+﻿@model  MicroBluer.AndroidMobile.Models.HostModel
 
 <div class="line-section">
     <div class="list-group">
