--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostsView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostsView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  List<LazyWelfare.AndroidMobile.Models.HostModel>
+﻿@model  List<MicroBluer.AndroidMobile.Models.HostModel>
     <div class="line-section">
         <ul class="list-group">
             @foreach (var one in Model)
