--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/UserEditView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/UserEditView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LazyWelfare.AndroidMobile.Models.UserModel
+﻿@model  MicroBluer.AndroidMobile.Models.UserModel
 
 <div class="panel panel-default">
     <div class="panel-heading">
