--- a/src/Mobile/MicroBluer.AndroidCtrls.ImageExpleror/Resources/layout/ImageSelect_PhotoPickGridListItem.axml
+++ b/src/Mobile/MicroBluer.AndroidCtrls.ImageExpleror/Resources/layout/ImageSelect_PhotoPickGridListItem.axml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LazyWelfare.AndroidCtrls.ImageSelect.Widget.GridViewItemRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<MicroBluer.AndroidCtrls.ImageSelect.Widget.GridViewItemRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,4 +14,4 @@
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:button="@drawable/pick_photo_checkbox" />
-</LazyWelfare.AndroidCtrls.ImageSelect.Widget.GridViewItemRelativeLayout>
+</MicroBluer.AndroidCtrls.ImageSelect.Widget.GridViewItemRelativeLayout>
