--- a/src/Mobile/MicroBluer.AndroidCtrls/Resources/layout/ImageCtrl.axml
+++ b/src/Mobile/MicroBluer.AndroidCtrls/Resources/layout/ImageCtrl.axml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LazyWelfare.AndroidAreaView.Core.AreaImageView
+        <MicroBluer.AndroidAreaView.Core.AreaImageView
             android:id="@+id/imageCtrl"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
