--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostEditView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/HostEditView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LazyWelfare.AndroidMobile.Models.HostModel
+﻿@model  MicroBluer.AndroidMobile.Models.HostModel
 
 <div class="panel panel-default">
     <div class="panel-heading">
