--- a/src/Server/MicroBluer.ServerWeb/Views/_ViewImports.cshtml
+++ b/src/Server/MicroBluer.ServerWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using LazyWelfare.ServerWeb
-@using LazyWelfare.ServerWeb.Models
+@using MicroBluer.ServerWeb
+@using MicroBluer.ServerWeb.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
