--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/FolderMapIndexView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/FolderMapIndexView.cshtml
@@ -2,22 +2,20 @@
 <div class="line-section">
     <div class="list-group">
         <a href="javascript:void(0);" class="list-group-item  file-expleror">
-            <span class="glyphicon   glyphicon-inbox  " aria-hidden="true"></span>
+            <span class="glyphicon   glyphicon-search  " aria-hidden="true"></span>
             <span>文档浏览</span>
         </a>
     </div>
 </div>
 
-
 <div class="line-section">
     <div class="list-group">
         <a href="javascript:void(0);" class="list-group-item  file-private-expleror">
-            <span class="glyphicon   glyphicon-retweet  " aria-hidden="true"></span>
+            <span class="glyphicon   glyphicon-search  " aria-hidden="true"></span>
             <span>归档浏览</span>
         </a>
     </div>
 </div>
-
 
 <div class="line-section">
     <div class="list-group">
@@ -37,7 +35,7 @@
         $(".file-private-expleror").click(function () {
             javascript: BuinessScript.FilePrivateExpleror();
         });
-
+     
 
         $(".file-play").click(function () {
             ViewScript.RequestPartial('#MainContent', "Replace", '@FolderMapsView.Partial.Host', '@FolderMapsView.Partial.Path');
