--- a/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/FolderMapIndexView.cshtml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/Partials/FolderMapIndexView.cshtml
@@ -25,20 +25,34 @@
         </a>
     </div>
 </div>
+
+
+<div class="line-section">
+    <div class="list-group">
+        <a href="javascript:void(0);" class="list-group-item  file-exclued-expleror">
+            <span class="glyphicon   glyphicon-trash " aria-hidden="true"></span>
+            <span>映射排除</span>
+        </a>
+    </div>
+</div>
+
 <script>
     $(function () {
 
         $(".file-expleror").click(function () {
-            javascript: BuinessScript.FileExpleror();
+            javascript: BuinessScript.FileExpleror(null);
         });
 
         $(".file-private-expleror").click(function () {
             javascript: BuinessScript.FilePrivateExpleror();
         });
-     
 
         $(".file-play").click(function () {
             ViewScript.RequestPartial('#MainContent', "Replace", '@FolderMapsView.Partial.Host', '@FolderMapsView.Partial.Path');
+        });
+        
+        $(".file-exclued-expleror").click(function () {
+            ViewScript.RequestPartial('#MainContent', "Replace", '@FolderExcluedsView.Partial.Host', '@FolderExcluedsView.Partial.Path');
         });
 
     })
